--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<img src="IMAGES/Playlistr.png" class="img-responsive">
 
 							<h2 class="text-center"><a href="https://csa-music-app.herokuapp.com/" target="blank">Playlistr</a></h2>
-							<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to serach for specific keywords in titles or artists.</p>
+							<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to search for specific keywords in titles or artists.</p>
 							<h4>Technology</h4>
 							<div class="row text-center">
 								<div class="col-xs-12">
@@ -181,7 +181,7 @@
 
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="#" target="blank">Open site</a>
+										<a class="btn btn-launch" href="https://docs.google.com/document/d/1Nt1kpEJawPNHUZsKIqbGrGgCl1wyZ0phbnaYQhJNTL4/edit?usp=sharing" target="blank">Open site</a>
 								</div>
 						</div>
 				</div>
