--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
 
 		<nav class="navbar navbar-default hidden-sm hidden-md hidden-lg navbar-fixed-top">
 			<div class="container-fluid">
-				
+
+			</div>
+		</nav>
+
+
+
+		<div class="container main-container">
+
+
+			<div class="row">
+
+				<!-- side content -->
 				<div class="col-sm-3 about-me about-side text-center hidden-xs">
 						<img src="IMAGES/cordero.png" width=200 class="profile-pic img-responsive center-block">
 						<h1>Cordero	Dixon</h1>
@@ -42,7 +53,10 @@
 						<h2>Full-Stack Developer</h2>
 						<h3>Web Developer</h3>
 
-
+						<div class="text-center" style="margin:20px">
+						
+						</div>
+				</div>
 
 				<div class="bottom-cta hidden-sm hidden-md hidden-lg text-center">
 					<div class="btn btn-success">Get in touch</div>
@@ -81,7 +95,7 @@
 							<img src="IMAGES/Playlistr.png" class="img-responsive">
 
 							<h2 class="text-center"><a href="https://csa-music-app.herokuapp.com/" target="blank">Playlistr</a></h2>
-							<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to search for specific keywords in titles or artists.</p>
+							<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to serach for specific keywords in titles or artists.</p>
 							<h4>Technology</h4>
 							<div class="row text-center">
 								<div class="col-xs-12">
@@ -158,7 +172,7 @@
 
 
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://docs.google.com/document/d/1Nt1kpEJawPNHUZsKIqbGrGgCl1wyZ0phbnaYQhJNTL4/edit?usp=sharing" target="blank">Open site</a>
+										<a class="btn btn-launch" href="https://docs.google.com/document/d/1Nt1kpEJawPNHUZsKIqbGrGgCl1wyZ0phbnaYQhJNTL4/" target="blank">Open site</a>
 								</div>
 						</div>
 				</div>
