--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<h3>Web Developer</h3>
 
 						<div class="text-center" style="margin:20px">
-						
+
 						</div>
 				</div>
 
@@ -196,7 +196,7 @@
 							<div style="margin:50px;">
 								<h3 style="margin:50px 0 15px">Have any questions please contact me.</h3>
 								<a href="#" class="" target="_blank">
-									CorderoDixon.com
+									www.CorderoDixon.com
 								</a>
 							</div>
 						</div>
