--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 						<div class="col">
 							<div style="margin:50px;">
 								<h3 style="margin:50px 0 15px">Have any questions please contact me.</h3>
-								<a href="#" class="" target="_blank">
+								<a href="www.corderodixon.com" class="" target="_blank">
 									www.CorderoDixon.com
 								</a>
 							</div>
