--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 				<div class="row work-item-row">
 						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="IMAGES/resume.png" class="img-responsive">
+								<img src="IMAGES/final.resume.png" class="img-responsive">
 								<h2 class="text-center">Resume</h2>
 
 
