added Flee Project

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 		<title>Cordero Dixon's Portfolio</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
 
 
 		<!-- Devicons -->
 		<link rel="stylesheet" href="css/devicon.css">
 	  <link rel="stylesheet" href="css/devicon-colors.css">
+		<link rel="icon" href="IMAGES/cordero.png">
 
 
 
@@ -159,6 +161,24 @@
 								</div>
 								<div class="row text-center" style="margin:20px;">
 										<a class="btn btn-launch" href="https://agile-sierra-89921.herokuapp.com/" target="blank">Launch app</a>
+								</div>
+						</div>
+				</div>
+
+				<div class="row work-item-row">
+						<div class="col-sm-8 col-sm-offset-2 project">
+								<img src="IMAGES/flee.png" class="img-responsive">
+								<h2 class="text-center"><a href="https://12developer.github.io/flee/index.html" target="blank"></a></h2>
+								<p></p>
+								<h4>Technology</h4>
+								<div class="row text-center">
+										<div class="col-xs-12">
+											<img src="img/techlogos/html.png" class="techlogo" width="100">
+											<img src="img/techlogos/css.png" class="techlogo" width="100">
+										</div>
+								</div>
+								<div class="row text-center" style="margin:20px;">
+										<a class="btn btn-launch" href="https://12developer.github.io/flee/index.html" target="blank">Launch site</a>
 								</div>
 						</div>
 				</div>
