--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Cordero Dixon's Portfolio</title>
+		<link rel="stylesheet" href="devices.min.css" type="text/css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
+
 
 
 		<!-- Devicons -->
@@ -33,97 +35,104 @@
 
 		<div class="container main-container">
 
+		
+							<div class="row">
 
-			<div class="row">
+					<!-- side content -->
+					<div class="col-sm-3 about-me about-side text-center hidden-xs">
+							<img src="IMAGES/cordero.png" width=200 class="profile-pic img-responsive center-block">
+							<h1>Cordero	Dixon</h1>
+							<h2>Full-Stack Developer</h2>
+							<h3>Web Developer</h3>
 
-				<!-- side content -->
-				<div class="col-sm-3 about-me about-side text-center hidden-xs">
-						<img src="IMAGES/cordero.png" width=200 class="profile-pic img-responsive center-block">
-						<h1>Cordero	Dixon</h1>
-						<h2>Full-Stack Developer</h2>
-						<h3>Web Developer</h3>
+							<div class="text-center" style="margin:20px">
+								<a href="https://www.linkedin.com/in/corderodixon/" class="cta-icon"><i class="devicon-linkedin-plain colored"></i></a>
+								<a href="https://github.com/12Developer" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+							</div>
+					</div>
 
-						<div class="text-center" style="margin:20px">
-							<a href="https://www.linkedin.com/in/corderodixon/" class="cta-icon"><i class="devicon-linkedin-plain colored"></i></a>
-							<a href="https://github.com/12Developer" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+					<!-- main content -->
+					<div class="col-sm-9 col-sm-offset-3">
+						<div class="row work-item-row">
+								<div class="col-sm-8 col-sm-offset-2 project">
+
+									<img src="IMAGES/SimonPortfolio.png" class="img-responsive">
+
+									<h2 class="text-center"><a href="https://12developer.github.io/" target="blank">Simon</a></h2>
+									<p>A simple memory skilled game.</p>
+									<h4>Technology</h4>
+									<div class="row text-center">
+										<div class="col-xs-12">
+											<img src="img/techlogos/Jquery.png" class="techlogo" width="100">
+											<img src="img/techlogos/html.png" class="techlogo" width="100">
+											<img src="img/techlogos/js.png" class="techlogo" width="100">
+											<img src="img/techlogos/css.png" class="techlogo" width="100">
+										</div>
+									</div>
+									<div class="row text-center" style="margin:20px;">
+											<a class="btn btn-launch" href="https://12developer.github.io/" target="blank">Launch</a>
+									</div>
+								</div>
 						</div>
-				</div>
 
-				<div class="text-center about-me hidden-sm hidden-md hidden-lg">
-						<img src="IMAGES/cordero.png" width=200 class="profile-pic img-responsive center-block">
-						<h1>Cordero	Dixon</h1>
-						<h2>Full-Stack Developer</h2>
-						<h3>Web Developer</h3>
-
-						<div class="text-center" style="margin:20px">
-
-						</div>
-				</div>
-
-				<div class="bottom-cta hidden-sm hidden-md hidden-lg text-center">
-					<div class="btn btn-success">Get in touch</div>
-				</div>
-
-
-				<!-- main content -->
-				<div class="col-sm-9 col-sm-offset-3">
-
-
-					<div class="row work-item-row">
+						<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
 
-								<img src="IMAGES/SimonPortfolio.png" class="img-responsive">
+								<img src="IMAGES/Playlistr.png" class="img-responsive">
 
-								<h2 class="text-center"><a href="https://12developer.github.io/" target="blank">Simon</a></h2>
-								<p>A simple memory skilled game.</p>
+								<h2 class="text-center"><a href="https://csa-music-app.herokuapp.com/" target="blank">Playlistr</a></h2>
+								<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to serach for specific keywords in titles or artists.</p>
 								<h4>Technology</h4>
 								<div class="row text-center">
 									<div class="col-xs-12">
-										<img src="img/techlogos/Jquery.png" class="techlogo" width="100">
+										<img src="img/techlogos/mongodb.png" class="techlogo" width="100">
+										<img src="img/techlogos/express.png" class="techlogo" width="100">
+										<img src="img/techlogos/angular.png" class="techlogo" width="100">
+										<img src="img/techlogos/node.png" class="techlogo" width="100">
+										<img src="img/techlogos/heroku.png" class="techlogo" width="100">
 										<img src="img/techlogos/html.png" class="techlogo" width="100">
-										<img src="img/techlogos/js.png" class="techlogo" width="100">
 										<img src="img/techlogos/css.png" class="techlogo" width="100">
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://12developer.github.io/" target="blank">Launch</a>
+										<a class="btn btn-launch" href="https://csa-music-app.herokuapp.com/" target="blank">Go to app</a>
 								</div>
-							</div>
-					</div>
-
-					<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-
-							<img src="IMAGES/Playlistr.png" class="img-responsive">
-
-							<h2 class="text-center"><a href="https://csa-music-app.herokuapp.com/" target="blank">Playlistr</a></h2>
-							<p>Playlistr is an app for creating customizable and social playlist. It uses the Last.fm API to search from a catalog and music and features a filter to allow you to serach for specific keywords in titles or artists.</p>
-							<h4>Technology</h4>
-							<div class="row text-center">
-								<div class="col-xs-12">
-									<img src="img/techlogos/mongodb.png" class="techlogo" width="100">
-									<img src="img/techlogos/express.png" class="techlogo" width="100">
-									<img src="img/techlogos/angular.png" class="techlogo" width="100">
-									<img src="img/techlogos/node.png" class="techlogo" width="100">
-									<img src="img/techlogos/heroku.png" class="techlogo" width="100">
-									<img src="img/techlogos/html.png" class="techlogo" width="100">
-									<img src="img/techlogos/css.png" class="techlogo" width="100">
-								</div>
-							</div>
-							<div class="row text-center" style="margin:20px;">
-									<a class="btn btn-launch" href="https://csa-music-app.herokuapp.com/" target="blank">Go to app</a>
 							</div>
 						</div>
+
+						<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+									<img src="IMAGES/quitter.png" class="img-responsive">
+									<h2 class="text-center"><a href="https://quitter-app.herokuapp.com/" target="blank">Quitter</a></h2>
+									<p>Quitter is a social media app for the non-committal type. Feel free to communicate with everyone on Quitter about the things that you've failed to get done..</p>
+									<h4>Technology</h4>
+									<div class="row text-center">
+											<div class="col-xs-12">
+													<img src="img/techlogos/rails.png" class="techlogo" width="100">
+													<img src="img/techlogos/react.png" class="techlogo" width="100">
+													<img src="img/techlogos/ruby.png" class="techlogo" width="100">
+													<img src="img/techlogos/heroku.png" class="techlogo" width="100">
+													<img src="img/techlogos/postgres.png" class="techlogo" width="100">
+													<img src="img/techlogos/js.png" class="techlogo" width="100">
+													<img src="img/techlogos/html.png" class="techlogo" width="100">
+													<img src="img/techlogos/css.png" class="techlogo" width="100">
+											</div>
+									</div>
+									<div class="row text-center" style="margin:20px;">
+											<a class="btn btn-launch" href="https://quitter-app.herokuapp.com/" target="blank">Open app</a>
+									</div>
+							</div>
 					</div>
 
+
 					<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="IMAGES/quitter.png" class="img-responsive">
-								<h2 class="text-center"><a href="https://quitter-app.herokuapp.com/" target="blank">Quitter</a></h2>
-								<p>Quitter is a social media app for the non-committal type. Feel free to communicate with everyone on Quitter about the things that you've failed to get done..</p>
-								<h4>Technology</h4>
-								<div class="row text-center">
-										<div class="col-xs-12">
+							<div class="col-sm-8 col-sm-offset-2 project">
+									<img src="IMAGES/brainstorm.png" class="img-responsive">
+									<h2 class="text-center"><a href="https://agile-sierra-89921.herokuapp.com/" target="blank">Brainstorm</a></h2>
+									<p>Brainstorm is an app where users can store their ideas to their account.</p>
+									<h4>Technology</h4>
+									<div class="row text-center">
+											<div class="col-xs-12">
 												<img src="img/techlogos/rails.png" class="techlogo" width="100">
 												<img src="img/techlogos/react.png" class="techlogo" width="100">
 												<img src="img/techlogos/ruby.png" class="techlogo" width="100">
@@ -132,113 +141,90 @@
 												<img src="img/techlogos/js.png" class="techlogo" width="100">
 												<img src="img/techlogos/html.png" class="techlogo" width="100">
 												<img src="img/techlogos/css.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://quitter-app.herokuapp.com/" target="blank">Open app</a>
-								</div>
-						</div>
-				</div>
-
-
-				<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="IMAGES/brainstorm.png" class="img-responsive">
-								<h2 class="text-center"><a href="https://agile-sierra-89921.herokuapp.com/" target="blank">Brainstorm</a></h2>
-								<p>Brainstorm is an app where users can store their ideas to their account.</p>
-								<h4>Technology</h4>
-								<div class="row text-center">
-										<div class="col-xs-12">
-											<img src="img/techlogos/rails.png" class="techlogo" width="100">
-											<img src="img/techlogos/react.png" class="techlogo" width="100">
-											<img src="img/techlogos/ruby.png" class="techlogo" width="100">
-											<img src="img/techlogos/heroku.png" class="techlogo" width="100">
-											<img src="img/techlogos/postgres.png" class="techlogo" width="100">
-											<img src="img/techlogos/js.png" class="techlogo" width="100">
-											<img src="img/techlogos/html.png" class="techlogo" width="100">
-											<img src="img/techlogos/css.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://agile-sierra-89921.herokuapp.com/" target="blank">Launch app</a>
-								</div>
-						</div>
-				</div>
-
-				<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="IMAGES/flee.png" class="img-responsive">
-								<h2 class="text-center"><a href="https://12developer.github.io/flee/index.html" target="blank"></a></h2>
-								<p></p>
-								<h4>Technology</h4>
-								<div class="row text-center">
-										<div class="col-xs-12">
-											<img src="img/techlogos/html.png" class="techlogo" width="100">
-											<img src="img/techlogos/css.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://12developer.github.io/flee/index.html" target="blank">Launch site</a>
-								</div>
-						</div>
-				</div>
-
-
-
-				<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="IMAGES/CorderoDixonResume.png" class="img-responsive">
-								<h2 class="text-center">Resume</h2>
-
-
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://docs.google.com/document/d/1Nt1kpEJawPNHUZsKIqbGrGgCl1wyZ0phbnaYQhJNTL4/" target="blank">Open site</a>
-								</div>
-						</div>
-				</div>
-
-
-
-
-					<div class="row row-tools row-grey">
-							<div class="col-sm-12 text-center">
-
-								<h3>Tools I Use</h3>
-								<img src="img/tool-logos/git.png" class="techlogo" width="150">
-								<img src="img/tool-logos/atom.png" class="techlogo" width="150">
-								<img src="img/techlogos/slack.png" class="techlogo" width="150">
-
+											</div>
+									</div>
+									<div class="row text-center" style="margin:20px;">
+											<a class="btn btn-launch" href="https://agile-sierra-89921.herokuapp.com/" target="blank">Launch app</a>
+									</div>
 							</div>
 					</div>
 
-					<div class="row row-footer text-center">
-						<div class="col">
-							<div style="margin:50px;">
-								<h3 style="margin:50px 0 15px">Have any questions please contact me.</h3>
-								<a href="www.corderodixon.com" class="" target="_blank">
-								</a>
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+									<img src="IMAGES/flee.png" class="img-responsive">
+									<h2 class="text-center"><a href="https://12developer.github.io/flee/index.html" target="blank"></a></h2>
+									<p></p>
+									<h4>Technology</h4>
+									<div class="row text-center">
+											<div class="col-xs-12">
+												<img src="img/techlogos/html.png" class="techlogo" width="100">
+												<img src="img/techlogos/css.png" class="techlogo" width="100">
+											</div>
+									</div>
+									<div class="row text-center" style="margin:20px;">
+											<a class="btn btn-launch" href="https://12developer.github.io/flee/index.html" target="blank">Launch site</a>
+									</div>
 							</div>
-						</div>
 					</div>
 
 
-				</div> <!-- end main content -->
+
+					<div class="row work-item-row">
+							<div class="col-sm-8 col-sm-offset-2 project">
+									<img src="IMAGES/CorderoDixonResume.png" class="img-responsive">
+									<h2 class="text-center">Resume</h2>
+
+
+									<div class="row text-center" style="margin:20px;">
+											<a class="btn btn-launch" href="https://docs.google.com/document/d/1Nt1kpEJawPNHUZsKIqbGrGgCl1wyZ0phbnaYQhJNTL4/" target="blank">Open site</a>
+									</div>
+							</div>
+					</div>
 
 
 
-			</div>
+
+						<div class="row row-tools row-grey">
+								<div class="col-sm-12 text-center">
+
+									<h3>Tools I Use</h3>
+									<img src="img/tool-logos/git.png" class="techlogo" width="150">
+									<img src="img/tool-logos/atom.png" class="techlogo" width="150">
+									<img src="img/techlogos/slack.png" class="techlogo" width="150">
+
+								</div>
+						</div>
+
+						<div class="row row-footer text-center">
+							<div class="col">
+								<div style="margin:50px;">
+									<h3 style="margin:50px 0 15px">Have any questions please contact me.</h3>
+									<a href="www.corderodixon.com" class="" target="_blank">
+									</a>
+								</div>
+							</div>
+						</div>
+
+
+					</div> <!-- end main content -->
+
+
+
+				</div>
 
 
 
 
 
-		</div>
+
+	<div class="bottom-bar"></div>
+</div>
 
 
 		<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
 		<script src="js/jquery-3.1.0.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<!-- <script src="js/myScripts.js"></script> -->
+		<script src="js/myScripts.js"></script>
 
 		<script>
 			$(document).scroll(function() {
